--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -131,97 +131,90 @@
       </div>
     </div>
       <!-- 배너 슬라이드 끝 -->
-  
-    <section>
-      <div class="promotion">
-        <div id="section_title">
-          <h2>고기</h2>
-        </div>
-        
-        <div class="gallery_wrap">
+    
+      <!-- 메인페이지 시작 -->
+      <section class="section">
+        <div class="subsection">
+          <div id="section_header_wrap">
+            <h2>고기</h2>
+          </div>
+        <!-- section 1 -->
           <div class="section_left_btn">
             <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
           </div>
           <div class="section_right_btn">
             <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
           </div>
-          <div class="gallery">
-            <div class="item">
-              <div class="thumbnail" >
-                <a id="test" href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-        
-            <div class="item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
-            </div>
-            <div class="item">
-              <div class="thumbnail" >
-                <a href="">
-                  <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                </a>
-              </div>
-              <div class="shopping_cart">
-                <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-              </div>
-              <div class="description">
-                <h3 class="description_text"><a href="">[오리온] 태양의 맛 썬칩</a></h3>
-                <div class="price">
-                  10,000
-                  <span>원</span>
-                </div>
-              </div>
+          <div class="gallery_wrap">
+            <div class="section_contents_wrap gallery galleryOn">
+              <ul class="meat slides">       
+              </ul>
             </div>
           </div>
         </div>
-      </div>
+      </section>
 
-      
-    </section>
-
+      <section class="section">
+        <div class="subsection">
+          <div id="section_header_wrap">
+            <h2>야채</h2>
+          </div>
+          <!-- section 2 -->
+          <div class="section_left_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
+          </div>
+          <div class="section_right_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
+          </div>
+          <div class="gallery_wrap">
+            <div class="section_contents_wrap gallery galleryOn">
+              <ul class="vegetable slides">       
+              </ul>
+            </div>
+          </div>
+        </div> 
+      </section>
+      <section class="section">
+        <div class="subsection">
+          <div id="section_header_wrap">
+            <h2>과일</h2>
+          </div>
+          <!-- section 3 -->
+          <div class="section_left_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
+          </div>
+          <div class="section_right_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
+          </div>
+          <div class="gallery_wrap">
+            <div class="section_contents_wrap gallery galleryOn">
+              <ul class="fruit slides">       
+              </ul>
+            </div>
+          </div>
+        </div> 
+      </section>
+      <section class="section">
+        <div class="subsection">
+          <div id="section_header_wrap">
+            <h2>생선</h2>
+          </div>
+          <!-- section 4 -->
+          <div class="section_left_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_left_60_60.svg" alt="">
+          </div>
+          <div class="section_right_btn">
+            <img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/arrow_list_right_over_60_60.svg" alt="">
+          </div>
+          <div class="gallery_wrap">
+            <div class="section_contents_wrap gallery galleryOn">
+              <ul class="fish slides">       
+              </ul>
+            </div>
+          </div>
+        </div> 
+      </section>
+<!-- 메인페이지 끝 -->
 
 
     <!-- footer  -->
@@ -259,7 +252,8 @@
 
     <script src="home.js" type="module"></script>
     <script src="banner_slider.js"></script>
-
+    <script src="section.js" type="module"></script>
+    <script src="section_slider.js"></script>
   </body>
 
 </html>
