--- a/src/views/product/product.html
+++ b/src/views/product/product.html
@@ -23,72 +23,93 @@
       crossorigin="anonymous"
     ></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="../product.css" />
+    <link rel="stylesheet" href="product.css" />
+    <script src="home/home.js"></script>
+    <script src="home/home-nav.js"></script>
+    
+    <!-- 로고 -->
+    <style>
+      .logo {
+        width:70px; 
+        height:70px; 
+        border-radius: 25%; 
+        background-image: url('../logo.png'); 
+        background-size: cover; 
+        box-shadow: 0px 0px 5px #333;
+        transition: all 0.3s ease-in-out;
+        top: 25px;
+        vertical-align: top;
+        justify-content: center;
+      }
+      .logo:hover {
+        transform: scale(1.1);
+      }
+    </style>
   </head>
 
 <body>
-     <!-- 헤더 시작 -->
-   <div id="header">
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="container mt-3">
-        <div class="navbar-brand">
-          <a class="navbar-item" href="/">
-            <div class="logo">
-            </div>
-          </a>
-          <a
-            role="button"
-            class="navbar-burger"
-            aria-label="menu"
-            aria-expanded="false"
-            data-target="navbarBasicExample"
-          >
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-          </a>
-        </div>
-          <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
-            <ul id="navbar">
-            </ul>
-          </div>
-        </div>
-      </div>
-    </nav>
-    <div id="navbar_menu" class="sticky">
-      <div class="menu_main">
-        
-        <ul class="menu_list">
-          <li class="menu category_toggle">
-              <div class="toggle">
-                <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt="">
-                <span>전체 카테고리</span>
+    <!-- 헤더 시작 -->
+    <div id="header">
+      <nav class="navbar" role="navigation" aria-label="main navigation">
+        <div class="container mt-3">
+          <div class="navbar-brand">
+            <a class="navbar-item" href="/">
+              <div class="logo">
               </div>
-            <div class="category_wrap">
-              <ul id="inner_nav">
-                <li><a onclick="location.href='/product/meat'" class="meat"><span>고기</span></a></li>
-                <li><a onclick="location.href='/product/vegetable'" class="vegetable"><span>야채</span></a></li>
-                <li><a onclick="location.href='/product/fruit'" class="fruit"><span>과일</span></a></li>
-                <li><a onclick="location.href='/product/fish'" class="fish"><span>생선</span></a></li>
+            </a>
+            <a
+              role="button"
+              class="navbar-burger"
+              aria-label="menu"
+              aria-expanded="false"
+              data-target="navbarBasicExample"
+            >
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+              <span aria-hidden="true"></span>
+            </a>
+          </div>
+            <div class="navbar-end breadcrumb my-auto" aria-label="breadcrumbs">
+              <ul id="navbar">
               </ul>
             </div>
-          </li>
-          <li class="menu menu2">
-            <a href="/product/meat" class="meat">고기</a>
-          </li>
-          <li class="menu menu3">
-            <a href="/product/vegetable" class="vegetable">채소</a>
-          </li>
-          <li class="menu menu4">
-            <a href="/product/fruit" class="fruit">과일</a>
-          </li>
-          <li class="menu menu5">
-            <a href="/product/fish" class="fish">생선</a>
-          </li>
-        </ul>
+          </div>
+        </div>
+      </nav>
+      <div id="navbar_menu" class="sticky">
+        <div class="menu_main">
+          
+          <ul class="menu_list">
+            <li class="menu category_toggle">
+                <div class="toggle">
+                  <img width="16px" height="14px" src="https://res.kurly.com/pc/service/common/1908/ico_gnb_all_off_x2.png" alt="">
+                  <span>전체 카테고리</span>
+                </div>
+              <div class="category_wrap">
+                <ul id="inner_nav">
+                  <li><a onclick="location.href='/product/meat'" class="meat"><span>고기</span></a></li>
+                  <li><a onclick="location.href='/product/vegetable'" class="vegetable"><span>야채</span></a></li>
+                  <li><a onclick="location.href='/product/fruit'" class="fruit"><span>과일</span></a></li>
+                  <li><a onclick="location.href='/product/fish'" class="fish"><span>생선</span></a></li>
+                </ul>
+              </div>
+            </li>
+            <li class="menu menu2">
+              <a href="/product/meat" class="meat">고기</a>
+            </li>
+            <li class="menu menu3">
+              <a href="/product/vegetable" class="vegetable">채소</a>
+            </li>
+            <li class="menu menu4">
+              <a href="/product/fruit" class="fruit">과일</a>
+            </li>
+            <li class="menu menu5">
+              <a href="/product/fish" class="fish">생선</a>
+            </li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
 
       <!-- main -->
     <section class="section">
@@ -97,44 +118,24 @@
       </div>
       <div id="list_products">
         <div id="inner_list_products">
-              <!-- <div class="item">
-                <div class="thumbnail" >
-                  <a href="">
-                    <img src="https://img-cf.kurly.com/shop/data/goods/1637929148186l0.jpeg" alt="타코야키" >
-                  </a>
-                </div>
-                <div class="shopping_cart">
-                  <button class="shopping_cart_icon"><img src="https://s3.ap-northeast-2.amazonaws.com/res.kurly.com/kurly/ico/2021/cart_white_45_45.svg" alt="카트담기 아이콘" ></button>
-                </div>
-                <div class="description">
-                  <h3 class="description_text"><a href="">[고기나라] 고기고기</a></h3>
-                  <div class="price">
-                    10,000
-                    <span>원</span>
-                  </div>
-                </div>
-              </div> -->
         </div>
       </div>
     </section>
     
-      <!-- footer -->
+      <!-- footer  -->
     <footer class="footer">
       <div id="customer_center_wrap">
         <h2 class="center_h2">고객행복센터</h2>
-      
-    
 
         <div id="call_wrap">
           <div class="call_title_wrap">
-            <h3 class="call">1234-5678</h3>
+            <h3 class="call">1779-5549</h3>
           </div>
           <div id="right_call_wrap">
             <p class="customer">365고객센터</p>
             <p class="detail">오전 7시 - 오후 7시</p>
           </div>
         </div>
-
         <div id="question_wrap">
           <div class="question_title_wrap">
             <h3 class="cc_qna">1:1 문의</h3>
@@ -147,22 +148,12 @@
       </div>
 
       <div id="introduce_wrap" >
-        <ul class="introduce_list">
-          <li>컬리소개</li>
-          <li>컬리소개영상</li>
-          <li>인재채용</li>
-          <li>이용약관</li>
-        </ul>
-        <p class="footer_p">법인명 ( 상호 ) : 주식회사 xx <span>I</span> 사업자등록번호 : 111-11-11111 <span class="font_change">사업자정보 확인</span></p>
-        <p class="footer_p">통신판매업 : 제 1111-서울강남-11111호 <span>I</span> 개인정보보호책임자 : xxx</p>
-        <p class="footer_p">주소 : 서울특별시 xx구 xx란로 111,11층(xx동) <span>I</span> 대표이사 : xxx</p>
-        <p class="footer_p">입점문의 : <span class="font_change">입점문의하기</span> <span>I</span> 마케팅제휴 : <span class="font_change">xxxxxxxx3714@xxxxxx.com</span></p>
-        <p class="footer_p">채용문의 : <span class="font_change">recruit@xxxxx.xxx</span>
-        <p class="footer_p">대량주문 문의 : <span class="font_change">xxxxxxx@xxxxxx.com</span></p>
-  
+        <p class="footer_p">COMPANY : (주)푸드장 / OWNER : 박승준, 김호진, 이아영, 김용민, 조성호 / CALL CENTER : 1779-5549 <span>I</span></p>
+        <p class="footer_p">ADDRESS : 서울 강남구 테헤란로53길 16 예안빌딩 B1층 <span>I</span></p>
+        <p class="footer_p">입점문의: tmdeksdl@gmail.com <span>I</span> 채용문의: cohojin3714@gmail.com <span>I</span> aylee5117@gmail.com
+        <p class="footer_p">개인정보관리책임자: bdd3452@gmail.com <span>I</span> whtjdgh104@gmail.com 
       </div>
     </footer>
-    
-    <script src="../product.js" type="module"></script>
+    <script src="/product.js" type="module"></script>
 </body>
 </html>
