--- a/src/views/admin-cart-list/admin-cart-list.html
+++ b/src/views/admin-cart-list/admin-cart-list.html
@@ -32,8 +32,8 @@
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
-    <link rel="stylesheet" href="user-info-cart.css" />
-    <script src="user-info-cart.js" type="module" defer></script>
+    <link rel="stylesheet" href="admin-cart-list.css" />
+    <script src="admin-cart-list.js" type="module" defer></script>
   </head>
   <body>
     <!-- 헤더 -->
@@ -80,22 +80,22 @@
       <h2 class="user_cart_title">주문 조회</h2>
       <div class="cart_list_container_wrap">
         <div class="cart_list_container">
-          <div class="cart_list_items1">날짜</div>
+          <div class="cart_list_items1">회원이름</div>
           <div class="cart_list_items2">주문정보</div>
-          <div class="cart_list_items3">상태</div>
-          <div class="cart_list_items4">신청</div>
+          <div class="cart_list_items3">주문날짜</div>
+          <div class="cart_list_items4">총 가격</div>
         </div>
         <!-- 여기서부터는 db에 있는 데이터들을 다시 뿌려주는 역할을 한다. -->
 
         <div class="db_cart_list_wrap">
-          <!-- <div class="db_cart_list_container">
-            <div class="db_cart_list_items1">2022/05/31</div>
+          <!-- <div class="db_cart_list_container"> -->
+            <!-- <div class="db_cart_list_items1">2022/05/31</div>
             <div class="db_cart_list_items2">아이보리 니트 1개</div>
             <div class="db_cart_list_items3">상품 준비중</div>
             <div class="db_cart_list_items4">
               <button type="button" class="user_cart_cancel">주문 취소</button>
-            </div>
-          </div> -->
+            </div> -->
+          <!-- </div> -->
         </div>
       </div>
     </div>
