--- a/src/views/user-info-manage/user-info-manage.html
+++ b/src/views/user-info-manage/user-info-manage.html
@@ -23,6 +23,8 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="user-info-manage.css" />
+    <!-- sweetalert2 사용하기 위한 파일 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../../../home/home.js" type = "module" defer></script>
     <script src="../../../home/home-nav.js" type = "module" defer></script>
     <!-- 로고 -->
