--- a/src/views/home/home.html
+++ b/src/views/home/home.html
@@ -112,10 +112,10 @@
        <!-- 배너 슬라이드 시작 -->
     <div class="slides_wrap">
       <div class="images">        
-        <div class="image image1"><img alt=""></div>
-        <div class="image image2"><img alt=""></div>
-        <div class="image image3"><img alt=""></div>
-        <div class="image image4"><img alt=""></div> 
+        <div onclick="location.href = '/product/meat'" class="image image1"><img alt=""></div>
+        <div onclick="location.href = '/product/vegetable'" class="image image2"><img alt=""></div>
+        <div onclick="location.href = '/product/fruit'" class="image image3"><img alt=""></div>
+        <div onclick="location.href = '/product/fish'" class="image image4"><img alt=""></div> 
       </div>
       <div onclick="side_slide(-1)" class="slide left">
         <span class="fas fa-angle-left"></span> 
