--- a/src/views/pay/pay.html
+++ b/src/views/pay/pay.html
@@ -21,6 +21,8 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
     <!-- 카카오 OAuth -->
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
+    <!-- sweetalert2 사용하기 위한 파일 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="pay.css" />
      <!-- 로고 -->
