--- a/src/views/admin-cart-list/admin-cart-list.html
+++ b/src/views/admin-cart-list/admin-cart-list.html
@@ -36,6 +36,8 @@
     <script src="/home/home.js" type = "module" defer></script>
     <link rel="stylesheet" href="admin-cart-list.css" />
     <script src="admin-cart-list.js" type="module" defer></script>
+    <!-- sweetalert2 사용하기 위한 파일 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- 로고 -->
     <style>
       .logo {
