--- a/src/views/cart/cart.html
+++ b/src/views/cart/cart.html
@@ -23,11 +23,12 @@
     <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
     <!-- 커스텀 css, js -->
     <link rel="stylesheet" href="cart.css" />
-    <script src="cartInit.js" defer></script>
-    <script src="cart.js" defer></script>
-    <script src="cart-test.js" defer></script>
+    <script src="cartInit.js" type = "module" defer></script>
+    <script src="cart.js" type = "module" defer></script>
     <script src="../../home/home.js" type = "module" defer></script>
     <script src="../../home/home-nav.js" type = "module" defer></script>
+    <!-- sweetalert2 사용하기 위한 파일 -->
+    <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <!-- 로고 -->
     <style>
       .logo {
