--- a/src/views/product-detail/product-detail.css
+++ b/src/views/product-detail/product-detail.css
@@ -501,6 +501,31 @@ div.btn_zone div.btn_item button:hover {
   border: 1px solid rgb(156, 237, 217);
 }
 
+div.recent_zone {
+  width: 50%;
+  height: 150px;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+div.recent_zone p {
+  width: 100%;
+  height: 10%;
+  margin: 10px 10px 10px 0px !important;
+}
+
+div.recent_zone div {
+  width: 20%;
+  height: 73%;
+  display: flex;
+  align-items: center;
+}
+
+div.recent_zone div img {
+  width: 80%;
+  cursor: pointer;
+}
+
 /* footer 시작 */
 .footer_p {
   margin-top: 0px;
