--- a/src/views/product-detail/product-detail.html
+++ b/src/views/product-detail/product-detail.html
@@ -198,6 +198,9 @@
             </div>
 
           </div>
+          <div class="recent_zone">
+            <p class="title is-5 has-text-primary">최근 본 상품</p>
+          </div>
       </div>
 
     </section>
